tests/compile_fail/call-path.stderr
error: invalid argument, expected an identifier
 --> $DIR/call-path.rs:7:12
  |
7 |     #[call(self.len)]
  |            ^^^^
